--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-image: url('images/FON.jpg'); /* Заміни на шлях до твоєї картинки */
+    background-size: cover; /* Зменшує або збільшує зображення, щоб воно покривало весь екран */
+    background-position: center; /* Центрує зображення по горизонталі і вертикалі */
+    background-repeat: no-repeat; /* Забороняє повторення зображення */
     color: #333;
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #543927;
+    background-color: rgba(84, 57, 39, 0.8); /*  Додав прозорість для кращої читабельності на фоні */
     color: white;
     padding: 20px;
     text-align: center;
@@ -21,7 +24,7 @@ header {
 }
 
 .product {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8); /* Додав прозорість для гармонії з фоном */
     border: 1px solid #ddd;
     border-radius: 5px;
     margin: 10px;
@@ -29,13 +32,36 @@ header {
     text-align: center;
     width: calc(33.333% - 40px);
     box-sizing: border-box;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
 }
 
 .product img {
-    width: 100%; /* Підтверджуємо ширину */
-    height: 200px; /* Встановлюємо однакову висоту */
+    width: 100%;
+    height: 200px;
     object-fit: cover;
     border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.product:hover img {
+    transform: scale(1.1);
+}
+
+.product-description {
+    max-height: 0;
+    opacity: 0;
+    transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.9); /* Невелика прозорість для гарного вигляду з фоном */
+    color: #333;
+    margin-top: 10px;
+}
+
+.product:hover .product-description {
+    max-height: 200px; /* Адаптуй це значення відповідно до твого контенту */
+    opacity: 1;
 }
 
 .product h2, .product p, .product .price {
@@ -44,13 +70,13 @@ header {
 
 .product .price {
     font-size: 1.5em;
-    color: #e74c3c;
+    color: #543927;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 footer {
-    background-color: #543927;
+    background-color: rgba(84, 57, 39, 0.8); /* Додав прозорість для поєднання з фоном */
     color: white;
     text-align: center;
     padding: 10px 0;
